@@ -2,6 +2,7 @@
 - Ported to SDL 2
 - Added VSync and windowed fullscreen options
 - Added support for scaling the graphics
+- Added NPC quest indicators and a Quests window
 - Added ability to open external links in news, chat and NPC dialogs
 - Added ability to mention assigned keys in NPC dialogs
 - Added support for text formatting to NPC dialogs
